--- a/ec2/ec2_v1.yaml
+++ b/ec2/ec2_v1.yaml
@@ -4,8 +4,8 @@ Description: 'EC2 Cold/Warm Start Time Test Infrastructure'
 Parameters:
   TestImage:
     Type: String
-    # Default: 'public.ecr.aws/docker/library/python:latest'
-    Default: '970089764833.dkr.ecr.us-east-2.amazonaws.com/gengdy/pixeks-spike-worker:1.0'
+    Default: '970089764833.dkr.ecr.us-east-2.amazonaws.com/ecr-public/eks-distro/kubernetes-csi/livenessprobe:v2.15.0-eks-1-33-9' # 120mb
+    # Default: '970089764833.dkr.ecr.us-east-2.amazonaws.com/gengdy/pixeks-spike-worker:1.0' # 150mb
     Description: Container image to use for testing
 
   InstanceType:
