--- a/network/amazon/pom.xml
+++ b/network/amazon/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.pixelsdb</groupId>
-    <artifactId>network</artifactId>
+    <artifactId>amazon-network</artifactId>
     <version>0.1.0-SNAPSHOT</version>
 
     <properties>
