--- a/network/amazon/pom.xml
+++ b/network/amazon/pom.xml
@@ -13,6 +13,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mainClass>io.pixelsdb.ccb.network.Main</mainClass>
+        <maven.plugin.surefire.version>2.22.2</maven.plugin.surefire.version>
         <maven.plugin.shade.version>3.2.2</maven.plugin.shade.version>
 
         <dep.pixels.version>0.2.0-SNAPSHOT</dep.pixels.version>
@@ -92,7 +93,7 @@
     </dependencies>
 
     <build>
-        <finalName>pixels-cli</finalName>
+        <finalName>amazon-network</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -100,6 +101,15 @@
         </resources>
 
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.plugin.surefire.version}</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -111,7 +121,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <finalName>pixels-cli</finalName>
+                            <finalName>amazon-network</finalName>
                             <outputDirectory>${project.basedir}/target</outputDirectory>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
                             <shadedClassifierName>full</shadedClassifierName>
