--- a/network/amazon/pom.xml
+++ b/network/amazon/pom.xml
@@ -48,6 +48,10 @@
             <groupId>io.pixelsdb</groupId>
             <artifactId>pixels-storage-http</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.pixelsdb</groupId>
+            <artifactId>pixels-storage-s3qs</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
