--- a/network/amazon/pom.xml
+++ b/network/amazon/pom.xml
@@ -104,6 +104,14 @@
             <artifactId>log4j-api</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>log4j-over-slf4j</artifactId>
+        </dependency>
 
         <!-- testing -->
         <dependency>
